# fastapi-todo

./: .coverage  .env.example  Dockerfile  README.md  coverage.xml  docker-compose.yml  docker-compose.yml.bak  mypy.ini  pyproject.toml  pytest.ini  pytest.ini.bak  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  test_ci.db
.github/workflows/: ci-e2e.yml  ci.yml
app/: db.py  main.py
app/api/: todos.py
app/core/: config.py
app/models/: __init__.py  todo.py  user.py
app/schemas/: todo.py
fastapi_todo_app.egg-info/: PKG-INFO  SOURCES.txt
migrations/: env.py
migrations/versions/: aafe874e5b13_init_tables.py
tests/: conftest.py  test_e2e_postgres.py  test_healthz.py  test_todos.py
workflows/: ci-e2e.yml  ci-e2e.yml.bak  ci-quality.yml  ci.yml  ci.yml.bak
